fix viz awkward cutoff on resize UBI node toggles text-panel click hint fades and exits

--- a/themes/base-hugo-theme/assets/scss/viz.scss
+++ b/themes/base-hugo-theme/assets/scss/viz.scss
@@ -79,10 +79,6 @@ nav.navbar.sticky-top {
     //border: .5px solid black;
     background: white;
     color: black;
-
-    &.dismissed {
-      display: none;
-    }
   }
 
   #viz-space {
